[package]
authors = ["Byron Wasti <byron.wasti@gmail.com>"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
description = "A platform agnostic driver for the RN4870 BLE module"
keywords = [
    "embedded-hal-driver",
    "ble",
    "bluetooth",
]
license = "MIT OR Apache-2.0"
name = "rn4870"
repository = "https://github.com/byronwasti/rn4870"
version = "0.2.2"

[dependencies]
bitflags = "1.2.1"
embedded-hal = "0.2.4"
nb = "0.1.2"

[dev-dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
heapless = "0.7.0"
panic-halt = "0.2.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
stm32f1xx-hal = {version = "0.7.0", features = ["stm32f103", "rt"] }
