[package]
authors = ["Byron Wasti <byron.wasti@gmail.com>"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
description = "A platform agnostic driver for the RN4870 BLE module"
keywords = [
    "embedded-hal-driver",
    "ble",
    "bluetooth",
]
license = "MIT OR Apache-2.0"
name = "rn4870"
repository = "https://github.com/byronwasti/rn4870"
version = "0.2.2"

[dependencies]
bitflags = "1.2.1"
embedded-hal = "0.2.4"
nb = "0.1.2"
