[package]
name = "rn4870-examples"
version = "0.1.0"
authors = ["Adam Kloboucnik <adam@klob.cz>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
cortex-m = { version = "0.7.2" }
cortex-m-rt = { version = "0.6.13" }
heapless = { version = "0.7.0" }
nb = "0.1.2"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rn4870 = { path = "../" }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
stm32f1xx-hal = {version = "0.7.0", features = ["stm32f103", "rt"] }

[profile.release]
codegen-units = 1 # better optimizations
incremental = false
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z"
